2005-04-23  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* libgimp/gimpdrawablepreview.c (gimp_drawable_preview_draw_thumb):
	respect the selection (fixes bug #301523).

2005-04-22  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* libgimpwidgets/gimpintstore.c: removed the "row_deleted" handler
	which used to take care of reinserting the "Empty" item when the
	last row gets deleted. This doesn't work any longer with GTK+ 2.6
	and I see no way to make it work again. Fixes bug #301524.

2005-04-21  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/postscript.c: pass -dUseCropBox when loading PDF
	files, to match Acrobat Reader's behavior in honoring CropBox over
	MediaBox. Fixes bug #301432.

2005-04-20  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/common/mail.c (create_headers): set charset to UTF-8.

2005-04-20  Michael Natterer  <mitch@gimp.org>

	Merged from HEAD branch:

	* app/xcf/xcf-load.c (xcf_load_layer): initialize text_layer_flags
	with 0 so it doesn't contain random garbage if the text layer
	flags in the XCF have default values (are not saved at all). Fixes
	bug #301028. Initialize other stuff too for the sake of sanity.

2005-04-18  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/newsprint.c: Redo comment for spot_PSsquare
	and spot_PSdiamonds, since the code was not a derived work in
	the copyright sense. It is a C implementation of the same
	algorithm.

2005-04-18  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/core/gimpimage.c (gimp_image_real_colormap_changed):
	invalidate layer previews when the colormap changes. Fixes
	bug #301033.

2005-04-14  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* libgimp/gimpdrawable.[ch] (gimp_drawable_get_tile)
	(gimp_drawable_get_tile2): cleanup gint/gboolean confusion (spotted
	by Maurits Rijk).

2005-04-13  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:
